--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,28 @@
 {
   "name": "backend",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "Backend Portfolio",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
   "keywords": [
     "backend",
     "portfolio"
   ],
   "author": "algoroloro",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "0.21.1",
+    "bcryptjs": "2.4.3",
+    "express": "4.17.1",
+    "jsonwebtoken": "8.5.1",
+    "mongoose": "5.11.12",
+    "morgan": "1.10.0"
+  },
+  "devDependencies": {
+    "dotenv": "8.2.0",
+    "jest": "26.6.3",
+    "nodemon": "2.0.7"
+  }
 }
