--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -14,11 +14,10 @@
     "target": "es2015",
     "module": "es2020",
     "lib": ["es2018", "dom"],
-    "typeRoots": [
-      "node_modules/@types"
-    ],
+    "typeRoots": ["node_modules/@types"],
     "paths": {
-      "@core/*": ["src/app/core/*"]
+      "@core/*": ["src/app/core/*"],
+      "@shared/*": ["src/app/shared/*"]
     }
   }
 }
