--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -16,6 +16,7 @@
     "lib": ["es2018", "dom"],
     "typeRoots": ["node_modules/@types"],
     "paths": {
+      "@contact/*": ["src/app/contact/*"],
       "@core/*": ["src/app/core/*"],
       "@shared/*": ["src/app/shared/*"]
     }
